# test-bazel-rules-arrow

./: BUILD.bazel  README.md  WORKSPACE.bazel  main.cc
.github/workflows/: build.yml
